[package]
name = "encrypt-remote-hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[dependencies]
anyhow = "^1"
ureq = { version = "2.0", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
