[package]
name = "encrypt-remote-hook"
license = "MIT"
description = "A rust-based initcpio hook to configure full-disk encryption by reading a secret key from a remote endpoint."
homepage = "https://github.com/skeggse/encrypt-remote-hook"
documentation = "https://github.com/skeggse/encrypt-remote-hook"
repository = "https://github.com/skeggse/encrypt-remote-hook"
readme = "README.md"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[dependencies]
anyhow = "^1"
dnsclient = { version = "0.1", features = [] }
dotenv-parser = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ureq = { version = "2.0", features = ["tls"] }
